Fix description CrossShare and add links

--- a/public/index.html
+++ b/public/index.html
@@ -114,10 +114,10 @@
       <h2 id="projectheader">
         CrossShare
       </h2>
-      <p>CrossShare is a collaborative tool that enables professionals, developers, and peers to share and edit documents in real time. CrossShare provides a code editor, doc editor, and whiteboard to give users full customization on how they work together.
-      <span class="tech-stack-wrapper"><span class="tech-stack">Tech Stack: </span> MERN stack with MongoDB, Express, React/Redux and Node.js. Uses socket.io for live collaboration and Firebase for data persistence</span>
+      <p>CrossShare is a collaborative tool that enables professionals, developers, and peers to share and edit documents in real time. CrossShare provides a code editor, doc editor, and whiteboard, as well as video and audio chat capabilities to give users full customization on how they work together.
+      <span class="tech-stack-wrapper"><span class="tech-stack">Tech Stack: </span> Node.js/Express & React/Redux. Uses socket.io for live collaboration and Firebase for data persistence</span>
       </p>
-        <p class="center-p">Check out the <a href="https://wonderful-shirley-bab865.netlify.com/" target="_blank">Site</a> | <a href="https://github.com/jeffconnelly/spaced-repetition-client" target=_blank"">Repo</a></p>
+        <p class="center-p">Check out the <a href="https://crossshare.netlify.com/" target="_blank">Site</a> | <a href="https://github.com/RowdyRuffBoysINC/RRB-client" target=_blank"">Repo</a></p>
     </div>
   </section>
 
@@ -174,7 +174,7 @@
       </div>
   </section>
 
-  
+
 </section>
 
 <!-- Contact Section -->
