Fix random formatting

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
   <title>Jeff Connelly</title>
@@ -77,7 +76,7 @@
 </section>
 </header>
 
-<!-- Main Section All Wrapped Belows -->
+<!-- Main Section All Wrapped Below -->
 <main role="main">
 
 <!-- Intro Text Section -->
@@ -173,8 +172,6 @@
           <p class="center-p">Check out the  <a href="https://hikes-to-hops.herokuapp.com/" target="_blank">Site </a>| <a href="https://github.com/jeffconnelly/hikes-to-hops" target=_blank"">Repo</a></p>
       </div>
   </section>
-
-
 </section>
 
 <!-- Contact Section -->
